--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=mysql://b57c04510e6e6d:fa58cf92@us-cdbr-east-02.cleardb.com/heroku_1e94e125d891022?reconnect=true
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
