--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active = test
+spring.profiles.active = dev
 
-default.sender = diego.mazega@hotmail.com
-default.recipient = diego.mazega@hotmail.com
+default.sender = diego.mazega@gmail.com
+default.recipient = diego.mazega@gmail.com
