Configuração inicial do Spring Secutiry

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active = dev
+spring.profiles.active = test
 
 default.sender = diego.mazega@gmail.com
 default.recipient = diego.mazega@gmail.com
