Implementando autenticação e geração de token JWT e correção da repetição de email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active = test
 
 default.sender = diego.mazega@gmail.com
 default.recipient = diego.mazega@gmail.com
+
+jwt.secret=TokenAssinatura
+jwt.expiration=60000
