Salvando arquivo no S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender = diego.mazega@gmail.com
 default.recipient = diego.mazega@gmail.com
 
 jwt.secret=TokenAssinatura
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.acess_key_id = 
+aws.secret_acess_key = 
+s3.bucket = curso-spring-diego
+s3.region = sa-east-1
